--- a/tensorflow/contrib/makefile/Makefile
+++ b/tensorflow/contrib/makefile/Makefile
@@ -220,7 +220,9 @@ endif
 
 LIBS := \
 $(TARGET_NSYNC_LIB) \
--lstdc++ \
+-lc++_static \
+-lc++abi \
+-landroid_support \
 -lprotobuf \
 -lz \
 -lm
@@ -355,8 +357,8 @@ $(MARCH_OPTION) \
 -fPIC
 	INCLUDES = \
 -I$(NDK_ROOT)/sources/android/support/include \
--I$(NDK_ROOT)/sources/cxx-stl/gnu-libstdc++/4.9/include \
--I$(NDK_ROOT)/sources/cxx-stl/gnu-libstdc++/4.9/libs/$(ANDROID_ARCH)/include \
+-I$(NDK_ROOT)/sources/cxx-stl/llvm-libc++/include \
+-I$(NDK_ROOT)/sources/cxx-stl/llvm-libc++abi/include \
 -I. \
 -I$(MAKEFILE_DIR)/downloads/ \
 -I$(MAKEFILE_DIR)/downloads/eigen \
@@ -371,7 +373,7 @@ $(MARCH_OPTION) \
 
 	LIBS := \
 $(TARGET_NSYNC_LIB) \
--lgnustl_static \
+-lc++_static \
 -lprotobuf \
 -llog \
 -lz \
@@ -384,7 +386,7 @@ $(TARGET_NSYNC_LIB) \
 	LDFLAGS := \
 $(MARCH_OPTION) \
 -L$(MAKEFILE_DIR)/gen/protobuf_android/$(ANDROID_ARCH)/lib \
--L$(NDK_ROOT)/sources/cxx-stl/gnu-libstdc++/4.9/libs/$(ANDROID_ARCH) \
+-L$(NDK_ROOT)/sources/cxx-stl/llvm-libc++/libs/$(ANDROID_ARCH) \
 -fPIE \
 -pie \
 -v
